Jann 30/objects/ITPR__c.object
<CustomObject>
    <fields>
        <fullName>Acceptance_Time__c</fullName>
        <description>Days between Submitted Date and In Process Date</description>
        <formula>IF( 
(NOT(ISNULL(Submitted_Date__c)) &amp;&amp; NOT(ISNULL(In_Process_Date__c))), 
(IF(In_Process_Date__c&gt; Submitted_Date__c, In_Process_Date__c - Submitted_Date__c, Submitted_Date__c - In_Process_Date__c)), 
( 
IF(ISNULL(In_Process_Date__c) &amp;&amp; NOT(ISNULL(Submitted_Date__c)), 
0, 
(IF(NOT(ISNULL(In_Process_Date__c)), In_Process_Date__c - DATEVALUE(CreatedDate), 0)) 
) 
) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Time taken by request to get accepted after getting submitted</inlineHelpText>
        <label>Acceptance Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actionable_Request__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Actionable Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Actual_Finance_Assignee__c</fullName>
        <label>Actual Finance Assignee</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actual_Legal_Assignee__c</fullName>
        <label>Actual Legal Assignee</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actual_Procurement_Assignee__c</fullName>
        <label>Actual Procurement Assignee</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actual_Requestor__c</fullName>
        <label>Actual Requestor</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actual_Vendor_Governance_Assignee__c</fullName>
        <label>Actual Vendor Governance Assignee</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Approval_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for validating the Additional Approval process completion.</description>
        <label>Additional Approval Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Additional_Approver_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>IT_SES2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Additional_Approver_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>IT_SES1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Additional_Approver_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver 3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>IT_SES6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Addressee_Name__c</fullName>
        <inlineHelpText>Please enter the name of the person to whom the NDA is to be presented.  This does not have to be the name of the person signing it, although many supplier&apos;s prefer that it is.</inlineHelpText>
        <label>Addressee Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agreement_ID__c</fullName>
        <inlineHelpText>Currently this is a CCNAG and CONA requirement. This is the contract number from eSourcing.</inlineHelpText>
        <label>Agreement ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agreement_Term_Over_1_Yr__c</fullName>
        <inlineHelpText>Is agreement more than 1 year? Yes or no?</inlineHelpText>
        <label>Agreement Term Over 1 Yr?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>All_Digital_Initials_Obtained_Date__c</fullName>
        <description>Date when the request status changed to All Digital Initials Obtained Date</description>
        <label>All Digital Initials Obtained Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Any_Noteworthy_Exceptional_Risk__c</fullName>
        <inlineHelpText>Answer ‘Yes’ if there are any risks to supply, cost escalations, etc. that approvers should be aware of. Describe the risks in the following explanation field.</inlineHelpText>
        <label>Any Noteworthy/Exceptional Risk?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Approval_Time__c</fullName>
        <description>Days between In Approvals Date and All Digital Initials Obtained Date.</description>
        <formula>IF( 
(NOT(ISNULL(All_Digital_Initials_Obtained_Date__c)) &amp;&amp; NOT(ISNULL(In_Approvals_Date__c))), 
(IF( 
All_Digital_Initials_Obtained_Date__c &gt; In_Approvals_Date__c, All_Digital_Initials_Obtained_Date__c - In_Approvals_Date__c, In_Approvals_Date__c - All_Digital_Initials_Obtained_Date__c 
)), 
(IF( 
ISNULL(All_Digital_Initials_Obtained_Date__c) &amp;&amp; NOT(ISNULL(In_Approvals_Date__c)), 
0, 
(IF( 
NOT(ISNULL(All_Digital_Initials_Obtained_Date__c)), 
(IF(
NOT(ISNULL(Pending_Project_Final_Budget_Date__c)), All_Digital_Initials_Obtained_Date__c - Pending_Project_Final_Budget_Date__c,
(IF( 
NOT(ISNULL(In_Process_Date__c)),All_Digital_Initials_Obtained_Date__c - In_Process_Date__c, 
(IF( 
NOT(ISNULL(Assigned_Date__c)),All_Digital_Initials_Obtained_Date__c - Assigned_Date__c , 
(IF( 
NOT(ISNULL(Submitted_Date__c)),All_Digital_Initials_Obtained_Date__c - Submitted_Date__c, 
All_Digital_Initials_Obtained_Date__c - DATEVALUE(CreatedDate) 
))
))
)) 
)) 
,0)) 
)) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Time taken by request to get Approved after getting Submitted for Approval</inlineHelpText>
        <label>Approval Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approval_to_Executed_Time__c</fullName>
        <description>Days between All Digital Initials Obtained to Executed and Filed Date</description>
        <formula>IF( 
(NOT(ISNULL(All_Digital_Initials_Obtained_Date__c)) &amp;&amp; NOT(ISNULL(Executed_and_Filed_date__c))), 
(IF( 
Executed_and_Filed_date__c &gt; All_Digital_Initials_Obtained_Date__c, Executed_and_Filed_date__c - All_Digital_Initials_Obtained_Date__c, All_Digital_Initials_Obtained_Date__c - Executed_and_Filed_date__c
)), 
(IF( 
ISNULL(Executed_and_Filed_date__c) &amp;&amp; NOT(ISNULL(All_Digital_Initials_Obtained_Date__c)), 
0, 
(IF( 
NOT(ISNULL(Executed_and_Filed_date__c)), 
(IF(
NOT(ISNULL(In_Approvals_Date__c)), Executed_and_Filed_date__c - In_Approvals_Date__c,
(IF( 
NOT(ISNULL(Pending_Project_Final_Budget_Date__c)), Executed_and_Filed_date__c - Pending_Project_Final_Budget_Date__c, 
(IF( 
NOT(ISNULL(In_Process_Date__c)),Executed_and_Filed_date__c - In_Process_Date__c, 
(IF( 
NOT(ISNULL(Assigned_Date__c)),Executed_and_Filed_date__c - Assigned_Date__c , 
(IF( 
NOT(ISNULL(Submitted_Date__c)),Executed_and_Filed_date__c - Submitted_Date__c, 
Executed_and_Filed_date__c - DATEVALUE(CreatedDate) 
))
)) 
)) 
)) 
)) 
,0)) 
)) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Time taken by request to get Executed and filed after getting Approved</inlineHelpText>
        <label>Approval to Executed Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Are_There_Exceptions_To_LoL__c</fullName>
        <label>Are There Exceptions To LoL?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Are_There_Fees_For_Early_Termination__c</fullName>
        <inlineHelpText>Answer ‘Yes’ if there is a penalty for early termination. Describe how the early termination fee is calculated in the following explanation field.</inlineHelpText>
        <label>Are There Fees For Early Termination?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Assign_check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Assign check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assigned_Date__c</fullName>
        <description>Date when the request status changed to Assigned</description>
        <label>Assigned Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Assignment_Time__c</fullName>
        <description>Days between Assigned Date and In Process Date</description>
        <formula>IF( 
(NOT(ISNULL(Assigned_Date__c)) &amp;&amp; NOT(ISNULL(In_Process_Date__c))), 
(IF(In_Process_Date__c&gt; Assigned_Date__c, In_Process_Date__c - Assigned_Date__c, Assigned_Date__c - In_Process_Date__c)), 
( 
IF(ISNULL(In_Process_Date__c) &amp;&amp; NOT(ISNULL(Assigned_Date__c)), 
0, 
(IF(NOT(ISNULL(In_Process_Date__c)), In_Process_Date__c - Submitted_Date__c, 0)) 
) 
) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Time taken by request to get Accepted after getting submitted or Assigned</inlineHelpText>
        <label>Assignment Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Budget_to_Approval_Time__c</fullName>
        <description>Days between Pending Project Final Budget Date and In Approvals Date</description>
        <formula>IF( 
(NOT(ISNULL(Pending_Project_Final_Budget_Date__c)) &amp;&amp; NOT(ISNULL(In_Approvals_Date__c))), 
(IF(
Pending_Project_Final_Budget_Date__c &gt; In_Approvals_Date__c, Pending_Project_Final_Budget_Date__c - In_Approvals_Date__c, In_Approvals_Date__c - 

Pending_Project_Final_Budget_Date__c
)), 
(IF(
ISNULL(In_Approvals_Date__c) &amp;&amp; NOT(ISNULL(Pending_Project_Final_Budget_Date__c)), 
0, 
(IF(
NOT(ISNULL(In_Approvals_Date__c)), 
(IF(
NOT(ISNULL(In_Process_Date__c)),In_Approvals_Date__c - In_Process_Date__c,
(IF(
NOT(ISNULL(Assigned_Date__c)), In_Approvals_Date__c - Assigned_Date__c ,
(IF(
NOT(ISNULL(Submitted_Date__c)),In_Approvals_Date__c - Submitted_Date__c, 
In_Approvals_Date__c - DATEVALUE(CreatedDate)
))
))
))
,0)) 
)) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Time taken by request to get In Approvals after getting Pending Project Final Budget</inlineHelpText>
        <label>Budget to Approval Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Business_Area__c</fullName>
        <inlineHelpText>Select the IT team that owns this agreement</inlineHelpText>
        <label>Business Area</label>
        <picklist>
            <picklistValues>
                <fullName>CONA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GIT: HQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Services and Consulting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global Technology Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information Risk Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enterprise Architecture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bottler Service Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CIO Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CPS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TCCC selling licneses</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EU IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LA IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E&amp;A IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BIG IT: CIO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BIG IT: CTO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BIG IT: CDO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BIG IT: Integration Planning, PMO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BIG IT: Global Dev Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BIG IT: OSA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BIG IT: Security</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CCNA IT: CIO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CCNA IT: Finance and Enabling Functions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CCNA IT: Mktg, Comm, FR, Sales &amp; Decision Science</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CCNA IT: Mktg &amp; R&amp;D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CCR IT: CIO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CCR IT: IT Operations &amp; Enabling Function</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CCR IT:  Sales, Customer &amp; Commercial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CCR IT: Product Supply</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CAPEX1__c</fullName>
        <label>CAPEX</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CAPEX2__c</fullName>
        <label>CAPEX</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CAPEX3__c</fullName>
        <label>CAPEX</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CAPEX_Total1__c</fullName>
        <label>CAPEX Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CAPEX_Total_Formula__c</fullName>
        <formula>CAPEX1__c + CAPEX2__c + CAPEX3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CAPEX Total Formula</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <inlineHelpText>Category is the IT Procurement category for which you are requesting assistance.  Please see the attached PDF entitled “IT-SES Categories” for a depiction of the categories.</inlineHelpText>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Telecom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information Security</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supporting Assets &amp; Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application and SaaS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infrastructure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solution Delivery w/Preferred Suppliers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solution Delivery w/non-Preferred Supplier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Production Support w/Preferred Supplier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Production Support w/non-Preferred Supplier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Professional Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strategic Supplier Vendor Governance</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Complete_Date__c</fullName>
        <description>Date when the request status changed to Complete Date</description>
        <label>Complete Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Classification__c</fullName>
        <inlineHelpText>Please indicate the security classification for this contract.</inlineHelpText>
        <label>Contract Classification</label>
        <picklist>
            <picklistValues>
                <fullName>Unclassified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Confidential</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Highly Restricted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contract_Classified_As_Confidential__c</fullName>
        <inlineHelpText>Was the contract classified as confidential?</inlineHelpText>
        <label>Contract Classified As Confidential</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contract_Completion_Status__c</fullName>
        <inlineHelpText>Please select the final contract disposition</inlineHelpText>
        <label>Contract Completion Status</label>
        <picklist>
            <picklistValues>
                <fullName>Executed &amp; Filed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Executed &amp; Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contract_Effective_Date__c</fullName>
        <inlineHelpText>Please enter the effective date as documented in the contract</inlineHelpText>
        <label>Contract Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Filed_Date__c</fullName>
        <inlineHelpText>Please enter the date that the fully executed contract was loaded into iManage</inlineHelpText>
        <label>Contract Filed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Signed_By_TCCC_After_Eff_Date__c</fullName>
        <inlineHelpText>Was the contract signed by TCCC after the effective date?</inlineHelpText>
        <label>Contract Signed By TCCC After Eff. Date</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contract_Signed_Per_Chart_Of_Authority__c</fullName>
        <inlineHelpText>Was the contract signed per the Chart of Authortiy?</inlineHelpText>
        <label>Contract Signed Per Chart Of Authority</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cost_Avoidance__c</fullName>
        <inlineHelpText>Enter the total amount of cost avoidance achieved through negotiations.</inlineHelpText>
        <label>Cost Avoidance</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Currency_Type__c</fullName>
        <inlineHelpText>Enter the currency for which you expect this effort to be billed.</inlineHelpText>
        <label>Currency Type</label>
        <picklist>
            <picklistValues>
                <fullName>$ USD</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>€ EUR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Date_Needed_By__c</fullName>
        <inlineHelpText>Please enter the date by which you would like this work request completed.  For example, if this is a request for an RFP, indicate the date by which you would like a supplier selection made and a contract executed with selected supplier</inlineHelpText>
        <label>Date Needed By</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Delegated_Finance_Assignee__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If this box is checked, it means the assignee listed to the left has been temporarily delegated this request.</inlineHelpText>
        <label>Finance Delegated Document</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Delegated_Legal_Assignee__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If this box is checked, it means the assignee listed to the left has been temporarily delegated this request.</inlineHelpText>
        <label>Legal Delegated Document</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Delegated_Procurement_Assignee__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If this box is checked, it means the assignee listed to the left has been temporarily delegated this request.</inlineHelpText>
        <label>Procurement Delegated Document</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Delegated_Requestor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Delegated Requestor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ITPRYAdQ</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Delegated_Requestor_check__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If this box is checked, it means the Requestor listed to the left has been temporarily delegated this request.</inlineHelpText>
        <label>Requestor Delegated Document</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Delegated_Vendor_Governance_User__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If this box is checked, it means the assignee listed to the left has been temporarily delegated this request.</inlineHelpText>
        <label>Vendor Governance Delegated Document</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Detailed_Budget__c</fullName>
        <inlineHelpText>Enter in the amount of Capex and Opex spend related to this effort as well as the cost center that this project is budgeted in.</inlineHelpText>
        <label>Detailed Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Do_not_Auto_Assign__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Changing organization, category, and/or request type normally re-assigns this request according to pre-determined assignment routing rules. Check this box to override the pre-loaded assignment routing rules and maintain present assignment as is</inlineHelpText>
        <label>Do not Auto Assign</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_you_want_additional_approver__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do you want additional approver?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Duration_Of_NDA__c</fullName>
        <inlineHelpText>Please indicate the term for the NDA. Generally this is one year from the date on the NDA.</inlineHelpText>
        <label>Duration of NDA [# of year(s)]</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Engagement_Of_A_New_Supplier__c</fullName>
        <inlineHelpText>Answer ‘Yes’ if this is a supplier that does not have a master agreement with The Company.</inlineHelpText>
        <label>Engagement Of A New Supplier?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Evergreen__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This field will indicate if the contract is evergreen. Check this if this is an evergreen account</inlineHelpText>
        <label>Evergreen?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Exception_PO__c</fullName>
        <inlineHelpText>Was an exception PO issued for this contract?</inlineHelpText>
        <label>Exception PO</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Executed_and_Filed_date__c</fullName>
        <description>Date when the request status changed to Executed and Filed date</description>
        <label>Executed and Filed date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <inlineHelpText>Enter the date this contract expires.</inlineHelpText>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Final_Budget_Validated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Final Budget Validated?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Finance_Assignee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Finance Assignee</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ITPRXU7r</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Flag_as_All_Digital_Initials_Obtained__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is to fix the current issue of no email notification when ITSES request is set to &quot;All Digital Initials Obtained&quot; status</description>
        <label>Flag as All Digital Initials Obtained</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Guarantees__c</fullName>
        <label>Guarantees?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>I_Have_Read_The_Provided_ITP_OLA__c</fullName>
        <inlineHelpText>Please refer to the “ITP OLA” document link under the “IT-SES Help” section on the left.</inlineHelpText>
        <label>I Have Read The Provided ITP OLA</label>
        <picklist>
            <picklistValues>
                <fullName>My Request Is Within The ITP OLA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>My Request Is Not Within The ITP OLA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>If_Chg_Order_Provide_Orig_Contract_Value__c</fullName>
        <inlineHelpText>If you are requesting a change order, please provide the value of the original contract.  This is used to drive the Chart of Authority approvals.</inlineHelpText>
        <label>If Chg Order,Provide Orig Contract Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>If_NDA_Needs_To_Be_Predated_Enter_Date__c</fullName>
        <inlineHelpText>If discussions have already taken place or at least begun, please provide the date when discussions began.</inlineHelpText>
        <label>If NDA Needs To Be Predated, Enter Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>If_No_Explain1__c</fullName>
        <inlineHelpText>Please provide an explanation as to why a Financial Analysis was not conducted for this new supplier.</inlineHelpText>
        <label>If No, Explain</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>If_No_Explain2__c</fullName>
        <label>If No, Explain</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>If_No_Explain3__c</fullName>
        <label>If No, Explain</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>If_Required_Has_IT_Security_Approved__c</fullName>
        <inlineHelpText>Answer as appropriate for the request.</inlineHelpText>
        <label>If Required, Has IT Security Approved?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>If_Required_Has_The_TRB_Approved__c</fullName>
        <inlineHelpText>If Req&apos;d, before finally submitting for approvals, the answer to this question must be &apos;Yes&apos;</inlineHelpText>
        <label>If Required, Has The TRB Approved?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>If_Rqd_Has_Hosting_Cert_Team_Approved__c</fullName>
        <inlineHelpText>If Req&apos;d, before finally submitting for approvals, the answer to this question must be &apos;Yes&apos;.</inlineHelpText>
        <label>If Rqd, Has Hosting Cert. Team Approved?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>If_Yes_Explain1__c</fullName>
        <inlineHelpText>Detail the risks that should be called to the attention of the approvers.</inlineHelpText>
        <label>If Yes, Explain</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>If_Yes_Explain2__c</fullName>
        <inlineHelpText>Explain the situation(s) in which the supplier will retain any rights to newly developed IP under this effort.</inlineHelpText>
        <label>If Yes, Explain</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>If_Yes_Explain3__c</fullName>
        <inlineHelpText>Detail the early termination fees.</inlineHelpText>
        <label>If Yes, Explain</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>In_Approvals_Date__c</fullName>
        <description>Date when the request status changed to In Approvals Date</description>
        <label>In Approvals Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>In_Process_Date__c</fullName>
        <description>Date when the request status changed to In Process</description>
        <label>In Process Date</label>
        <type>Date</type>
    </fields>
</CustomObject>